test/parsing/errors/multipleExternalRenaming.chpl
extern "type" var ctype: int, dtype: int;
